out/test/COMPILER_PRO/src/com/company/gen/HTMLParser.java
// Generated from C:/Users/Lenovo/Desktop/COMPILER_PRO/COMPILER_PRO/src/com/company\HTMLParser.g4 by ANTLR 4.9.2
package com.company.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, TAG_WHITESPACE=2, SEA_WS=3, PAGE=4, HEADER=5, BODY=6, CONTROLLER=7, 
		PAGE_ID=8, PAGE_LINK=9, SESSION=10, SESSION_START=11, SESSION_END=12, 
		SESSION_REMOVE=13, MIX_CODE=14, LINK=15, LINK_NAME=16, HREF=17, OUT=18, 
		FORM=19, TRUE=20, FALSE=21, IN=22, FIELD=23, EMAIL_KEY=24, TEXT=25, EMAIL=26, 
		PASSWORD=27, FORM_NUMBER=28, PHONE_NUMBER=29, FILE=30, DATE=31, RADIO=32, 
		CHECKBOX=33, SELECT=34, SUBMIT=35, BUTTON=36, PASSWORD_VALUE=37, IMG=38, 
		VIDEO=39, AUDIO=40, ARROW=41, KEY=42, VALUE=43, PRINT_FUNCTION=44, ON_CLICK=45, 
		DOUBLE_CLICK=46, CONTROLE=47, FUNCTION_DEF_BOOLEAN=48, FUNCTION_DEF_VOID=49, 
		FUNCTION_DEF_DOUBLE=50, FUNCTION_DEF_INT=51, FUNCTION_DEF_STRING=52, FUNCTION_DEF_CHAR=53, 
		FUNCTION_DEF_MAP=54, FUNCTION_DEF_ARRAY=55, OUT_TEXT=56, AS=57, GO=58, 
		IF=59, LOOP=60, VAR=61, FUNCTION=62, RETURN=63, SEMICOLON=64, COLON=65, 
		COMMA=66, DOT=67, SINGLE_QUTATION=68, DOUBLE_QUTATION=69, BACK_SLASH=70, 
		EQUAL=71, GTHAN=72, LTHAN=73, NOTEQUAL=74, BLOCK_OPEN=75, BLOCK_CLOSE=76, 
		OPEN=77, CLOSE=78, ARRAY_OPEN=79, ARRAY_CLOSE=80, NUMBER=81, DATE_VAlUE=82, 
		NAME=83, MIX=84, STRING=85, CHAR=86, DIGIT=87;
	public static final int
		RULE_web = 0, RULE_session_start = 1, RULE_session = 2, RULE_session_end = 3, 
		RULE_session_remove = 4, RULE_page = 5, RULE_body_page = 6, RULE_body = 7, 
		RULE_php = 8, RULE_header_page = 9, RULE_page_id = 10, RULE_page_id_value = 11, 
		RULE_page_link = 12, RULE_path = 13, RULE_header = 14, RULE_in = 15, RULE_field = 16, 
		RULE_link_name = 17, RULE_link_href = 18, RULE_link = 19, RULE_form = 20, 
		RULE_text_value = 21, RULE_text = 22, RULE_strings = 23, RULE_email_value = 24, 
		RULE_email = 25, RULE_password = 26, RULE_number = 27, RULE_phone_number = 28, 
		RULE_file = 29, RULE_date = 30, RULE_radio = 31, RULE_button = 32, RULE_element = 33, 
		RULE_array = 34, RULE_check_box = 35, RULE_select = 36, RULE_out = 37, 
		RULE_image = 38, RULE_video = 39, RULE_audio = 40, RULE_on_click = 41, 
		RULE_double_click = 42, RULE_event = 43, RULE_button_body = 44, RULE_out_button = 45, 
		RULE_out_text = 46, RULE_function_empty = 47, RULE_function_with_arg = 48, 
		RULE_function = 49, RULE_function_name = 50, RULE_function_argument = 51, 
		RULE_arrow_key = 52, RULE_arrow_value = 53, RULE_arrow_name = 54, RULE_arrow = 55, 
		RULE_controller_id = 56, RULE_controller_body = 57, RULE_controller = 58, 
		RULE_function_body = 59, RULE_boolean_value = 60, RULE_function_return = 61, 
		RULE_if_rule = 62, RULE_condition = 63, RULE_operator = 64, RULE_go = 65, 
		RULE_before_as = 66, RULE_for_cond = 67, RULE_foreach = 68, RULE_map_value = 69, 
		RULE_map_element = 70, RULE_map = 71, RULE_statments = 72, RULE_var = 73, 
		RULE_object_type = 74, RULE_object = 75;
	private static String[] makeRuleNames() {
		return new String[] {
			"web", "session_start", "session", "session_end", "session_remove", "page", 
			"body_page", "body", "php", "header_page", "page_id", "page_id_value", 
			"page_link", "path", "header", "in", "field", "link_name", "link_href", 
			"link", "form", "text_value", "text", "strings", "email_value", "email", 
			"password", "number", "phone_number", "file", "date", "radio", "button", 
			"element", "array", "check_box", "select", "out", "image", "video", "audio", 
			"on_click", "double_click", "event", "button_body", "out_button", "out_text", 
			"function_empty", "function_with_arg", "function", "function_name", "function_argument", 
			"arrow_key", "arrow_value", "arrow_name", "arrow", "controller_id", "controller_body", 
			"controller", "function_body", "boolean_value", "function_return", "if_rule", 
			"condition", "operator", "go", "before_as", "for_cond", "foreach", "map_value", 
			"map_element", "map", "statments", "var", "object_type", "object"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'page'", "'header'", "'body'", "'controller'", 
			"'page_id'", "'page_link'", "'session'", "'session_start'", "'session_end'", 
			"'session_remove'", "'mix'", "'link'", "'link_name'", "'href'", "'out'", 
			"'form'", "'true'", "'false'", "'in'", "'field'", "'@'", "'text-type'", 
			"'email-type'", "'password-type'", "'number-type'", "'phone_number-type'", 
			"'file'", "'date'", "'radio'", "'checkbox'", "'select'", "'submit'", 
			"'button'", null, "'img'", "'video'", "'audio'", "'->'", "'key'", "'value'", 
			"'print'", "'onclick'", "'doubleclick'", "'controle'", "'BOOLEAN'", "'VOID'", 
			"'DOUBLE'", "'INT'", "'STRING'", "'CHAR'", "'MAP'", "'ARRAY'", "'text'", 
			"'as'", "'go'", "'if'", "'loop'", "'var'", "'function'", "'return'", 
			"';'", "':'", "','", "'.'", "'''", "'\"'", "'\\'", "'='", "'>'", "'<'", 
			"'!'", null, null, "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "TAG_WHITESPACE", "SEA_WS", "PAGE", "HEADER", "BODY", 
			"CONTROLLER", "PAGE_ID", "PAGE_LINK", "SESSION", "SESSION_START", "SESSION_END", 
			"SESSION_REMOVE", "MIX_CODE", "LINK", "LINK_NAME", "HREF", "OUT", "FORM", 
			"TRUE", "FALSE", "IN", "FIELD", "EMAIL_KEY", "TEXT", "EMAIL", "PASSWORD", 
			"FORM_NUMBER", "PHONE_NUMBER", "FILE", "DATE", "RADIO", "CHECKBOX", "SELECT", 
			"SUBMIT", "BUTTON", "PASSWORD_VALUE", "IMG", "VIDEO", "AUDIO", "ARROW", 
			"KEY", "VALUE", "PRINT_FUNCTION", "ON_CLICK", "DOUBLE_CLICK", "CONTROLE", 
			"FUNCTION_DEF_BOOLEAN", "FUNCTION_DEF_VOID", "FUNCTION_DEF_DOUBLE", "FUNCTION_DEF_INT", 
			"FUNCTION_DEF_STRING", "FUNCTION_DEF_CHAR", "FUNCTION_DEF_MAP", "FUNCTION_DEF_ARRAY", 
			"OUT_TEXT", "AS", "GO", "IF", "LOOP", "VAR", "FUNCTION", "RETURN", "SEMICOLON", 
			"COLON", "COMMA", "DOT", "SINGLE_QUTATION", "DOUBLE_QUTATION", "BACK_SLASH", 
			"EQUAL", "GTHAN", "LTHAN", "NOTEQUAL", "BLOCK_OPEN", "BLOCK_CLOSE", "OPEN", 
			"CLOSE", "ARRAY_OPEN", "ARRAY_CLOSE", "NUMBER", "DATE_VAlUE", "NAME", 
			"MIX", "STRING", "CHAR", "DIGIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class WebContext extends ParserRuleContext {
		public Session_startContext session_start() {
			return getRuleContext(Session_startContext.class,0);
		}
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public List<ControllerContext> controller() {
			return getRuleContexts(ControllerContext.class);
		}
		public ControllerContext controller(int i) {
			return getRuleContext(ControllerContext.class,i);
		}
		public WebContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_web; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterWeb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitWeb(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitWeb(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WebContext web() throws RecognitionException {
		WebContext _localctx = new WebContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_web);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			session_start();
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAGE || _la==CONTROLLER) {
				{
				setState(155);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PAGE:
					{
					setState(153);
					page();
					}
					break;
				case CONTROLLER:
					{
					setState(154);
					controller();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Session_startContext extends ParserRuleContext {
		public TerminalNode SESSION_START() { return getToken(HTMLParser.SESSION_START, 0); }
		public Session_startContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_session_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSession_start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSession_start(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSession_start(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Session_startContext session_start() throws RecognitionException {
		Session_startContext _localctx = new Session_startContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_session_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(SESSION_START);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SessionContext extends ParserRuleContext {
		public TerminalNode SESSION() { return getToken(HTMLParser.SESSION, 0); }
		public TerminalNode ARROW() { return getToken(HTMLParser.ARROW, 0); }
		public TerminalNode NAME() { return getToken(HTMLParser.NAME, 0); }
		public TerminalNode EQUAL() { return getToken(HTMLParser.EQUAL, 0); }
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public SessionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_session; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSession(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSession(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSession(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SessionContext session() throws RecognitionException {
		SessionContext _localctx = new SessionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_session);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(SESSION);
			setState(163);
			match(ARROW);
			setState(164);
			match(NAME);
			setState(165);
			match(EQUAL);
			setState(166);
			object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Session_endContext extends ParserRuleContext {
		public TerminalNode SESSION_END() { return getToken(HTMLParser.SESSION_END, 0); }
		public Session_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_session_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSession_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSession_end(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSession_end(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Session_endContext session_end() throws RecognitionException {
		Session_endContext _localctx = new Session_endContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_session_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(SESSION_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Session_removeContext extends ParserRuleContext {
		public TerminalNode SESSION_REMOVE() { return getToken(HTMLParser.SESSION_REMOVE, 0); }
		public Session_removeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_session_remove; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSession_remove(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSession_remove(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSession_remove(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Session_removeContext session_remove() throws RecognitionException {
		Session_removeContext _localctx = new Session_removeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_session_remove);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(SESSION_REMOVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public Header_pageContext header_page() {
			return getRuleContext(Header_pageContext.class,0);
		}
		public Body_pageContext body_page() {
			return getRuleContext(Body_pageContext.class,0);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_page);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			header_page();
			setState(173);
			body_page();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Body_pageContext extends ParserRuleContext {
		public TerminalNode BLOCK_OPEN() { return getToken(HTMLParser.BLOCK_OPEN, 0); }
		public TerminalNode HEADER() { return getToken(HTMLParser.HEADER, 0); }
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TerminalNode BODY() { return getToken(HTMLParser.BODY, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode BLOCK_CLOSE() { return getToken(HTMLParser.BLOCK_CLOSE, 0); }
		public Body_pageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterBody_page(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitBody_page(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitBody_page(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Body_pageContext body_page() throws RecognitionException {
		Body_pageContext _localctx = new Body_pageContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_body_page);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(BLOCK_OPEN);
			setState(176);
			match(HEADER);
			setState(177);
			header();
			setState(178);
			match(BODY);
			setState(179);
			body();
			setState(180);
			match(BLOCK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public TerminalNode BLOCK_OPEN() { return getToken(HTMLParser.BLOCK_OPEN, 0); }
		public TerminalNode BLOCK_CLOSE() { return getToken(HTMLParser.BLOCK_CLOSE, 0); }
		public List<LinkContext> link() {
			return getRuleContexts(LinkContext.class);
		}
		public LinkContext link(int i) {
			return getRuleContext(LinkContext.class,i);
		}
		public List<FormContext> form() {
			return getRuleContexts(FormContext.class);
		}
		public FormContext form(int i) {
			return getRuleContext(FormContext.class,i);
		}
		public List<OutContext> out() {
			return getRuleContexts(OutContext.class);
		}
		public OutContext out(int i) {
			return getRuleContext(OutContext.class,i);
		}
		public List<PhpContext> php() {
			return getRuleContexts(PhpContext.class);
		}
		public PhpContext php(int i) {
			return getRuleContext(PhpContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(BLOCK_OPEN);
			setState(187); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(187);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LINK:
					{
					setState(183);
					link();
					}
					break;
				case FORM:
					{
					setState(184);
					form();
					}
					break;
				case OUT:
					{
					setState(185);
					out();
					}
					break;
				case LTHAN:
					{
					setState(186);
					php();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(189); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 15)) & ~0x3f) == 0 && ((1L << (_la - 15)) & ((1L << (LINK - 15)) | (1L << (OUT - 15)) | (1L << (FORM - 15)) | (1L << (LTHAN - 15)))) != 0) );
			setState(191);
			match(BLOCK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PhpContext extends ParserRuleContext {
		public TerminalNode LTHAN() { return getToken(HTMLParser.LTHAN, 0); }
		public TerminalNode MIX_CODE() { return getToken(HTMLParser.MIX_CODE, 0); }
		public TerminalNode GTHAN() { return getToken(HTMLParser.GTHAN, 0); }
		public List<StatmentsContext> statments() {
			return getRuleContexts(StatmentsContext.class);
		}
		public StatmentsContext statments(int i) {
			return getRuleContext(StatmentsContext.class,i);
		}
		public PhpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_php; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPhp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPhp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPhp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PhpContext php() throws RecognitionException {
		PhpContext _localctx = new PhpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_php);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(LTHAN);
			setState(194);
			match(MIX_CODE);
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SESSION) | (1L << SESSION_END) | (1L << SESSION_REMOVE) | (1L << OUT) | (1L << PRINT_FUNCTION) | (1L << GO) | (1L << IF) | (1L << LOOP) | (1L << VAR))) != 0) || ((((_la - 71)) & ~0x3f) == 0 && ((1L << (_la - 71)) & ((1L << (EQUAL - 71)) | (1L << (NAME - 71)) | (1L << (DIGIT - 71)))) != 0)) {
				{
				{
				setState(195);
				statments();
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(201);
			match(GTHAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_pageContext extends ParserRuleContext {
		public TerminalNode PAGE() { return getToken(HTMLParser.PAGE, 0); }
		public TerminalNode NAME() { return getToken(HTMLParser.NAME, 0); }
		public Header_pageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterHeader_page(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitHeader_page(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitHeader_page(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Header_pageContext header_page() throws RecognitionException {
		Header_pageContext _localctx = new Header_pageContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_header_page);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(PAGE);
			setState(204);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
